# zoocute

./: .gitignore  README.md  USER_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.codex/: config.toml
.github/workflows/: build-release.yml
docs/: README.zh-CN.md  USER_GUIDE.zh-CN.md
docs/reviews/: 2026-03-28-code-review.md  2026-03-30-zookeeper-client-review.md  2026-03-31-fix-list.md
scripts/: build-portable.ps1
src/: App.test.tsx  App.tsx  app-bootstrap.tsx  browser-pane.test.tsx  connection-pane.test.tsx  connectivity.test.tsx  context-menu.test.tsx  data-interpretation.test.ts  dev-script.test.ts  editor-panel.test.tsx  layout.test.tsx  main.tsx  node-stat.test.tsx  persisted-connections.test.ts  server-tabs.test.tsx  session-manager.test.ts  tauri-config.test.ts  theme.test.ts  use-workbench-state.test.tsx  use-workbench-watch.test.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.portable.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  domain.rs  lib.rs  logging.rs  main.rs  parser_plugins.rs
src-tauri/src/zk_core/: adapter.rs  cache.rs  interpreter.rs  live.rs  mock.rs  mod.rs  types.rs
src-tauri/tests/: connection_persistence_tests.rs  interpreter_tests.rs  parser_plugin_command_tests.rs  parser_plugins_tests.rs  runtime_mode_tests.rs  settings_command_tests.rs  subtree_cache_tests.rs  zk_core_tests.rs
src/components/: browser-pane.tsx  connection-pane.tsx  diff-panel.tsx  editor-panel.tsx  editor-toolbar.test.tsx  editor-toolbar.tsx  log-pane.tsx  ribbon.tsx  (+11 more)
(+42 files in other folders)
